--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="note_text">Note Text</string>
     <string name="title_activity_note">Edit Note</string>
     <string name="cancel">Cancel</string>
+    <string name="title">Title</string>
+    <string name="course">Course</string>
+    <string name="next">Next</string>
 </resources>
